# daanio-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  INSTALLER_DEPLOYMENT.md  NOTICE.md  OAUTH.md  PLAN_MCP_SKILLS.md  README.md  RELEASE_SETUP.md  RELEASING.md  TELEMETRY.md
crates/daanio-app-core/: Cargo.toml
crates/daanio-app-core/src/: agent.rs  agent_tests.rs  ambient.rs  ambient_tests.rs  build.rs  catchup.rs  channel.rs  external_auth.rs  lib.rs  mission.rs  network_retry.rs  notifications.rs  overnight.rs  perf.rs  replay.rs  restart_snapshot.rs  restart_snapshot_tests.rs  server.rs  server_spawn.rs  session_active_pids.rs  session_launch.rs  session_rebuild.rs  setup_hints.rs  ssh_remote.rs  telemetry_state.rs  telemetry_tests.rs  turn_cancel_registry.rs  update.rs
crates/daanio-app-core/src/agent/: compaction.rs  environment.rs  inline_tail.rs  interrupts.rs  provider.rs  tools.rs  turn_loops.rs  turn_streaming_mpsc.rs  utils.rs
crates/daanio-app-core/src/agent_tests/: retention_readiness.rs
crates/daanio-app-core/src/ambient/: paths.rs  prompt.rs  runner.rs  runner_tests.rs  scheduler.rs
crates/daanio-app-core/src/replay/: tests.rs
crates/daanio-app-core/src/server/: await_members_state.rs  background_tasks.rs  client_actions.rs  client_actions_tests.rs  client_api.rs  client_comm_channels.rs  client_comm_message.rs  client_comm_tests.rs  client_disconnect_cleanup.rs  client_lifecycle.rs  client_lifecycle_tests.rs  client_session.rs  client_session_tests.rs  client_state.rs  client_state_tests.rs  comm_await.rs  comm_control.rs  comm_control_tests.rs  comm_graph.rs  comm_plan.rs  comm_plan_tests.rs  comm_session.rs  comm_session_tests.rs  debug.rs  debug_command_exec.rs  debug_server_state.rs  debug_swarm_read.rs  debug_swarm_write.rs  debug_testers.rs  debug_testers_tests.rs  debug_tests.rs  headless.rs  jade_relay.rs  lifecycle.rs  provider_control.rs  provider_control_tests.rs  queue_tests.rs  reload.rs  reload_recovery.rs  reload_state.rs  (+15 more)
crates/daanio-app-core/src/tool/: apply_patch.rs  bash.rs  bash_tests.rs  bg.rs  browser.rs  browser_tests.rs  communicate.rs  communicate_tests.rs  conversation_search.rs  debug_socket.rs  discover.rs  gmail.rs  goal_tests.rs  mcp.rs  memory.rs  mod.rs  open.rs  open_tests.rs  read.rs  session_search.rs  session_search_index.rs  session_search_tests.rs  side_panel_tests.rs  skill.rs  tests.rs  webfetch.rs  websearch.rs
crates/daanio-base/: Cargo.toml
crates/daanio-base/src/: background.rs  browser.rs  browser_tests.rs  bus.rs  cache_tracker.rs  client_input.rs  compaction.rs  config.rs  config_tests.rs  console.rs  copilot_usage.rs  dictation.rs  dictation_tests.rs  embedding.rs  embedding_backend.rs  env.rs  gateway.rs  generated_image.rs  gmail.rs  goal.rs  goal_tests.rs  hooks.rs  id.rs  import.rs  import_tests.rs  lib.rs  live_tests.rs  logging.rs  login_qr.rs  memory.rs  memory_agent.rs  memory_agent_tests.rs  memory_log.rs  memory_tests.rs  memory_types.rs  message.rs  model_pricing.rs  plan.rs  platform.rs  platform_tests.rs  (+30 more)
crates/daanio-base/src/auth/: active_method.rs  antigravity.rs  azure.rs  claude.rs  claude_tests.rs  codex.rs  codex_tests.rs  copilot.rs  copilot_auth_tests.rs  cursor.rs  cursor_tests.rs  doctor.rs  external_tests.rs  gemini.rs  gemini_tests.rs  google.rs  mod.rs  (+9 more)
crates/daanio-base/tests/: claude_import_integration.rs  launch_hotkeys_roundtrip.rs
crates/daanio-build-support/: Cargo.toml
crates/daanio-build-support/examples/: write_dev_sidecar.rs
crates/daanio-build-support/src/: lib.rs  paths.rs  platform_support.rs  storage_helpers.rs  tests.rs
crates/daanio-logging/: Cargo.toml
crates/daanio-logging/src/: lib.rs
crates/daanio-protocol/: Cargo.toml
crates/daanio-protocol/src/: comm_format.rs  lib.rs  wire.rs
crates/daanio-provider-anthropic/: Cargo.toml
crates/daanio-provider-anthropic-runtime/: Cargo.toml
crates/daanio-provider-anthropic-runtime/src/: anthropic_tests.rs  lib.rs
crates/daanio-provider-anthropic/src/: lib.rs
crates/daanio-provider-antigravity-runtime/: Cargo.toml
crates/daanio-provider-antigravity-runtime/src/: antigravity_tests.rs  lib.rs
crates/daanio-provider-claude-cli-runtime/: Cargo.toml
crates/daanio-provider-claude-cli-runtime/src/: lib.rs
crates/daanio-provider-env/: Cargo.toml
crates/daanio-provider-env/src/: lib.rs
crates/daanio-provider-openai/: Cargo.toml
crates/daanio-provider-openai/src/: request.rs  stream.rs  websocket_health.rs
crates/daanio-provider-openrouter/: Cargo.toml
crates/daanio-provider-openrouter-runtime/: Cargo.toml
crates/daanio-provider-openrouter-runtime/src/: lib.rs  openrouter_provider_impl.rs  openrouter_sse_stream.rs  openrouter_tests.rs
crates/daanio-provider-openrouter/src/: lib.rs  request.rs  stream.rs
crates/daanio-setup-hints/: Cargo.toml
crates/daanio-setup-hints/src/: cli_launch_hints.rs  launch_hotkeys.rs  lib.rs  linux_env.rs  linux_niri.rs  macos_launcher.rs  macos_launcher_tests.rs  macos_terminal.rs  setup_hints_tests.rs  windows_hotkeys.rs  windows_setup.rs
crates/daanio-telemetry-core/: Cargo.toml
crates/daanio-telemetry-core/src/: lib.rs  state_support.rs  tests.rs
crates/daanio-tool-core/: Cargo.toml
crates/daanio-tool-core/src/: lib.rs
crates/daanio-tui/: Cargo.toml
crates/daanio-tui-markdown/: Cargo.toml
crates/daanio-tui-markdown/src/: lib.rs  markdown_latex_image.rs  markdown_render_full.rs  markdown_render_lazy.rs  markdown_wrap.rs  render_core_adapter.rs  render_core_adapter_tests.rs
crates/daanio-tui-markdown/tests/: highlight_backend_probe.rs
crates/daanio-tui-messages/: Cargo.toml
crates/daanio-tui-messages/src/: cache.rs  message.rs  prepared.rs
crates/daanio-tui-permissions/: Cargo.toml
crates/daanio-tui-permissions/src/: lib.rs
crates/daanio-tui-session-picker/: Cargo.toml
crates/daanio-tui-session-picker/src/: lib.rs
crates/daanio-tui-visual-debug/: Cargo.toml
crates/daanio-tui-visual-debug/src/: lib.rs
crates/daanio-tui/src/: lib.rs  video_export.rs
crates/daanio-tui/tests/: width_stable_glyphs.rs
(+943 files in other folders)
