[package]
name = "daanio"
version = "0.1.0"
description = "Daanio CLI — a fast, multi-provider coding agent for the terminal"
edition = "2024"
autobins = false
license = "MIT"

[workspace]
members = [
    ".",
    "crates/daanio-agent-runtime",
    "crates/daanio-app-core",
    "crates/daanio-base",
    "crates/daanio-tui",
    "crates/daanio-build-meta",
    "crates/daanio-ambient-types",
    "crates/daanio-auth-types",
    "crates/daanio-embedding",
    "crates/daanio-gateway-types",
    "crates/daanio-import-core",
    "crates/daanio-pdf",
    "crates/daanio-logging",
    "crates/daanio-background-types",
    "crates/daanio-batch-types",
    "crates/daanio-build-support",
    "crates/daanio-compaction-core",
    "crates/daanio-config-types",
    "crates/daanio-core",
    "crates/daanio-fuzzy",
    "crates/daanio-memory-types",
    "crates/daanio-message-types",
    "crates/daanio-overnight-core",
    "crates/daanio-plan",
    "crates/daanio-productivity-core",
    "crates/daanio-swarm-core",
    "crates/daanio-protocol",
    "crates/daanio-selfdev-types",
    "crates/daanio-session-types",
    "crates/daanio-setup-hints",
    "crates/daanio-storage",
    "crates/daanio-side-panel-types",
    "crates/daanio-azure-auth",
    "crates/daanio-notify-email",
    "crates/daanio-provider-metadata",
    "crates/daanio-provider-env",
    "crates/daanio-provider-core",
    "crates/daanio-provider-bedrock",
    "crates/daanio-provider-anthropic",
    "crates/daanio-provider-antigravity",
    "crates/daanio-provider-copilot",
    "crates/daanio-provider-openrouter",
    "crates/daanio-provider-openai",
    "crates/daanio-provider-gemini",
    "crates/daanio-provider-gemini-runtime",
    "crates/daanio-provider-cursor-runtime",
    "crates/daanio-provider-antigravity-runtime",
    "crates/daanio-provider-copilot-runtime",
    "crates/daanio-provider-claude-cli-runtime",
    "crates/daanio-provider-openrouter-runtime",
    "crates/daanio-provider-anthropic-runtime",
    "crates/daanio-provider-openai-runtime",
    "crates/daanio-provider-doctor",
    "crates/daanio-tui-markdown",
    "crates/daanio-tui-messages",
    "crates/daanio-usage-types",
    "crates/daanio-tui-core",
    "crates/daanio-tui-mermaid",
    "crates/daanio-task-types",
    "crates/daanio-tool-core",
    "crates/daanio-tool-types",
    "crates/daanio-tui-account-picker",
    "crates/daanio-tui-anim",
    "crates/daanio-tui-render",
    "crates/daanio-tui-visual-debug",
    "crates/daanio-tui-session-picker",
    "crates/daanio-tui-style",
    "crates/daanio-tui-permissions",
    "crates/daanio-tui-tool-display",
    "crates/daanio-tui-usage-overlay",
    "crates/daanio-update-core",
    "crates/daanio-terminal-launch",
    "crates/daanio-terminal-image",
    "crates/daanio-telemetry-core",
    "crates/daanio-tui-workspace",
    "crates/daanio-desktop",
    "crates/daanio-render-core",
]

[lib]
name = "daanio"
path = "src/lib.rs"

[[bin]]
name = "daanio"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[[bin]]
name = "daanio-harness"
path = "src/bin/harness.rs"

[[bin]]
name = "session_memory_bench"
path = "src/bin/session_memory_bench.rs"
required-features = ["dev-bins"]

[[bin]]
name = "memory_recall_bench"
path = "src/bin/memory_recall_bench.rs"
required-features = ["dev-bins"]

[[bin]]
name = "mermaid_side_panel_probe"
path = "src/bin/mermaid_side_panel_probe.rs"
required-features = ["dev-bins"]

[[bin]]
name = "tui_bench"
path = "src/bin/tui_bench.rs"
required-features = ["dev-bins"]

[dependencies]
# Memory allocator (reduces fragmentation for long-running server)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }

# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File operations

# Utilities
dirs = "5"               # home directory
anyhow = "1"
libc = "0.2"             # Unix system calls (flock)
chrono = { version = "0.4", features = ["serde"] }

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)

# OAuth
sha2 = "0.10"
hex = "0.4"
open = "5"               # Open URLs in browser
daanio-tui-session-picker = { path = "crates/daanio-tui-session-picker", features = ["serde"] }

# Streaming
tokio-stream = "0.1"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Markdown & syntax highlighting

# PDF parsing (behind feature flag)
daanio-build-meta = { path = "crates/daanio-build-meta" }
# Tiny leaf helpers (console/env/fs/id) used directly by the cli layer.
# Presentation layer: the terminal UI (`tui`) + offline replay (`video_export`),
# compiled as a separate rustc unit. It re-exports the application core
# (`daanio-app-core`, which re-exports `daanio-base`), so the root crate (cli +
# bin) re-exports everything via `pub use daanio_tui::*`. default-features=false
# so the root feature set fully controls the downstream features (see
# [features]).
daanio-tui = { path = "crates/daanio-tui", default-features = false }
# `daanio provider-doctor` / provider diagnostics; sits downstream of daanio-base
# so doctor edits do not rebuild the base -> app-core -> tui spine.
daanio-provider-doctor = { path = "crates/daanio-provider-doctor" }
# Gemini provider runtime; sits downstream of daanio-base so gemini edits do
# not rebuild the base -> app-core -> tui spine. Registered with the external
# provider registry at startup (src/cli/startup.rs).
daanio-provider-gemini-runtime = { path = "crates/daanio-provider-gemini-runtime" }
daanio-provider-cursor-runtime = { path = "crates/daanio-provider-cursor-runtime" }
daanio-provider-antigravity-runtime = { path = "crates/daanio-provider-antigravity-runtime" }
daanio-provider-copilot-runtime = { path = "crates/daanio-provider-copilot-runtime" }
daanio-provider-claude-cli-runtime = { path = "crates/daanio-provider-claude-cli-runtime" }
daanio-provider-openrouter-runtime = { path = "crates/daanio-provider-openrouter-runtime" }
daanio-provider-anthropic-runtime = { path = "crates/daanio-provider-anthropic-runtime" }
daanio-provider-openai-runtime = { path = "crates/daanio-provider-openai-runtime" }
daanio-selfdev-types = { path = "crates/daanio-selfdev-types" }

# Archive extraction (for auto-update)
tempfile = "3"

[features]
# Include local ONNX/tokenizer embeddings in default builds so memory recall,
# semantic retrieval, and embedding-backed features work out of the box.
# Use `DAANIO_DEV_FEATURE_PROFILE=minimal` for compile-speed probes that need
# to skip optional default feature stacks.
default = ["pdf", "embeddings", "bedrock"]
dev-bins = ["daanio-tui/dev-bins"]
jemalloc = [
    "dep:tikv-jemallocator",
    "tikv-jemallocator/stats",
    "daanio-tui/jemalloc",
]
jemalloc-prof = [
    "jemalloc",
    "tikv-jemallocator/profiling",
    "daanio-tui/jemalloc-prof",
]
# Local embeddings and PDF extraction live in daanio-base / daanio-app-core;
# these features just forward down the stack.
embeddings = ["daanio-tui/embeddings"]
# Live AWS Bedrock support (the AWS SDK stack) lives in daanio-provider-bedrock;
# forwards down through daanio-tui -> daanio-app-core -> daanio-base.
bedrock = ["daanio-tui/bedrock"]
# Internal release feature: build a supported OpenSSL inside the CentOS 7
# compatibility image while preserving the glibc 2.17 runtime baseline.
linux-compat-vendored-openssl = ["daanio-tui/linux-compat-vendored-openssl"]
mmdr-size-api = ["daanio-tui/mmdr-size-api"]
pdf = ["daanio-tui/pdf"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSThread",
    "NSRunLoop",
    "NSDate",
    "NSTimer",
    "NSUserDefaults",
    "NSValue",
    "NSAttributedString",
    "NSDictionary",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSAppearance",
    "NSApplication",
    "NSResponder",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSCell",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSFontDescriptor",
    "NSImage",
    "NSAttributedString",
    "NSMenu",
    "NSMenuItem",
    "NSRunningApplication",
] }

[profile.release]
opt-level = 1
debug = 0
codegen-units = 256
incremental = true

[profile.selfdev]
inherits = "release"
opt-level = 0

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

# Keep the idle-animation math kernels fully optimized even in debug-style
# builds. This crate is pure, dependency-free numeric code (the trig-heavy 3D
# samplers that otherwise dominate idle CPU). Pinning it to opt-level = 3 here
# means the optimized object is compiled once and reused across iterative
# dev/selfdev rebuilds, since it only recompiles when the animation code itself
# changes. The "*" glob above sets the default for dependencies; these explicit
# package entries take precedence for this one crate in each profile.
[profile.dev.package."daanio-tui-anim"]
opt-level = 3

[profile.selfdev.package."daanio-tui-anim"]
opt-level = 3

[profile.test.package."daanio-tui-anim"]
opt-level = 3

# The fuzzy matcher runs a char-level DP over every picker entry on every
# keystroke (e.g. /model search across hundreds of routes). Like the anim
# kernels above, it is small, pure, dependency-free code that rarely changes,
# so keeping it fully optimized in dev/selfdev builds costs one compile and
# removes visible input lag in unoptimized builds.
[profile.dev.package."daanio-fuzzy"]
opt-level = 3

[profile.selfdev.package."daanio-fuzzy"]
opt-level = 3

[profile.test.package."daanio-fuzzy"]
opt-level = 3

[profile.release.package."daanio-fuzzy"]
opt-level = 3

# Keep the text-shaping stack optimized even in dev/selfdev/test builds.
#
# cosmic-text + rustybuzz + ttf-parser + swash + yazi do all of the desktop
# transcript glyph shaping. At opt-level = 0 they are 15-40x slower, which made
# scrolling real (emoji/markdown-heavy) transcripts janky in dev/selfdev builds
# even though the production release build was smooth. These are stable
# third-party crates that almost never recompile, so pinning them to opt-level =
# 3 costs a one-time compile and is then reused across every iterative daanio
# rebuild (same rationale as daanio-tui-anim above). It does NOT slow down
# recompiles of daanio's own crates.
[profile.dev.package.cosmic-text]
opt-level = 3
[profile.selfdev.package.cosmic-text]
opt-level = 3
[profile.test.package.cosmic-text]
opt-level = 3

[profile.dev.package.rustybuzz]
opt-level = 3
[profile.selfdev.package.rustybuzz]
opt-level = 3
[profile.test.package.rustybuzz]
opt-level = 3

[profile.dev.package.ttf-parser]
opt-level = 3
[profile.selfdev.package.ttf-parser]
opt-level = 3
[profile.test.package.ttf-parser]
opt-level = 3

[profile.dev.package.swash]
opt-level = 3
[profile.selfdev.package.swash]
opt-level = 3
[profile.test.package.swash]
opt-level = 3

[profile.dev.package.yazi]
opt-level = 3
[profile.selfdev.package.yazi]
opt-level = 3
[profile.test.package.yazi]
opt-level = 3

[profile.dev.package.fontdb]
opt-level = 3
[profile.selfdev.package.fontdb]
opt-level = 3
[profile.test.package.fontdb]
opt-level = 3

# Keep the raster image pipeline optimized in dev/selfdev/test builds.
#
# Inline transcript images decode (png/zune-jpeg/fdeflate/miniz_oxide), resize
# (image), and base64-encode (kitty transmit) at draw time; at opt-level 0 a
# single screenshot costs 100-200ms per decode/resize, which reads as input
# lag. These are pure pixel crates with no daanio logic, so optimizing them
# does not hurt rebuild times for our own code.
[profile.dev.package.image]
opt-level = 3
[profile.selfdev.package.image]
opt-level = 3
[profile.test.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3
[profile.selfdev.package.png]
opt-level = 3
[profile.test.package.png]
opt-level = 3

[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.selfdev.package.zune-jpeg]
opt-level = 3
[profile.test.package.zune-jpeg]
opt-level = 3

[profile.dev.package.fdeflate]
opt-level = 3
[profile.selfdev.package.fdeflate]
opt-level = 3
[profile.test.package.fdeflate]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.selfdev.package.miniz_oxide]
opt-level = 3
[profile.test.package.miniz_oxide]
opt-level = 3

[profile.dev.package.base64]
opt-level = 3
[profile.selfdev.package.base64]
opt-level = 3
[profile.test.package.base64]
opt-level = 3

# session_search scans multi-megabyte session files with memchr-based
# case-insensitive matching; keep the SIMD scanner optimized everywhere.
[profile.dev.package.memchr]
opt-level = 3
[profile.selfdev.package.memchr]
opt-level = 3
[profile.test.package.memchr]
opt-level = 3

# The embedding stack (tract ONNX inference + HF tokenizer) runs the MiniLM
# model for memory recall/maintenance on the shared server. At opt-level 0 a
# single embed measured ~666 ms (matmul inner loops unoptimized), which keeps
# the model "busy" long enough that the idle unloader rarely fires and burns
# CPU on every memory-maintenance pass. These crates are pure compute and
# change only when the dependency is bumped, so the optimized objects are
# compiled once and cached across dev/selfdev iterations.
[profile.dev.package.tract-core]
opt-level = 3
[profile.selfdev.package.tract-core]
opt-level = 3
[profile.test.package.tract-core]
opt-level = 3
[profile.dev.package.tract-linalg]
opt-level = 3
[profile.selfdev.package.tract-linalg]
opt-level = 3
[profile.test.package.tract-linalg]
opt-level = 3
[profile.dev.package.tract-data]
opt-level = 3
[profile.selfdev.package.tract-data]
opt-level = 3
[profile.test.package.tract-data]
opt-level = 3
[profile.dev.package.tract-hir]
opt-level = 3
[profile.selfdev.package.tract-hir]
opt-level = 3
[profile.test.package.tract-hir]
opt-level = 3
[profile.dev.package.tract-onnx]
opt-level = 3
[profile.selfdev.package.tract-onnx]
opt-level = 3
[profile.test.package.tract-onnx]
opt-level = 3
[profile.dev.package.tract-onnx-opl]
opt-level = 3
[profile.selfdev.package.tract-onnx-opl]
opt-level = 3
[profile.test.package.tract-onnx-opl]
opt-level = 3
[profile.dev.package.tract-nnef]
opt-level = 3
[profile.selfdev.package.tract-nnef]
opt-level = 3
[profile.test.package.tract-nnef]
opt-level = 3
[profile.dev.package.ndarray]
opt-level = 3
[profile.selfdev.package.ndarray]
opt-level = 3
[profile.test.package.ndarray]
opt-level = 3
[profile.dev.package.tokenizers]
opt-level = 3
[profile.selfdev.package.tokenizers]
opt-level = 3
[profile.test.package.tokenizers]
opt-level = 3

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"
# Enables the downstream test-support helpers (storage::lock_test_env,
# auth::test_sandbox, bus::reset_models_updated_publish_state_for_tests, the
# ExternalAuthReviewCandidate read accessors) for the root crate's own cli test
# target. Feature unification applies this only to test/bench/example builds,
# never to a normal `cargo build`/release binary.
daanio-tui = { path = "crates/daanio-tui", default-features = false, features = ["test-support"] }

[build-dependencies]
