[package]
name = "daanio-build-support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
daanio-core = { path = "../daanio-core" }
daanio-selfdev-types = { path = "../daanio-selfdev-types" }
daanio-storage = { path = "../daanio-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
