[package]
name = "daanio-protocol"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
daanio-batch-types = { path = "../daanio-batch-types" }
daanio-config-types = { path = "../daanio-config-types" }
daanio-message-types = { path = "../daanio-message-types" }
daanio-plan = { path = "../daanio-plan" }
daanio-provider-core = { path = "../daanio-provider-core" }
daanio-selfdev-types = { path = "../daanio-selfdev-types" }
daanio-session-types = { path = "../daanio-session-types" }
daanio-side-panel-types = { path = "../daanio-side-panel-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1"
rand = "0.9"
