[package]
name = "daanio-provider-antigravity-runtime"
version = "0.1.0"
edition = "2024"
description = "Antigravity provider runtime (Google Cloud Code multiplexed Gemini/Claude backend) for daanio, kept downstream of daanio-base so provider edits do not rebuild the app spine"

[lib]
name = "daanio_provider_antigravity_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# default-features = false: the top-level binary decides heavy optional base
# features (embeddings/bedrock). Runtime crates must not re-enable them via
# feature unification, or --no-default-features release targets (e.g. Windows
# ARM64, which cannot build tract-linalg asm) break.
daanio-base = { path = "../daanio-base", default-features = false }
daanio-message-types = { path = "../daanio-message-types" }
daanio-provider-antigravity = { path = "../daanio-provider-antigravity" }
daanio-provider-core = { path = "../daanio-provider-core" }
daanio-provider-gemini = { path = "../daanio-provider-gemini" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# The migrated antigravity tests use daanio-base's test-env sandbox.
daanio-base = { path = "../daanio-base", default-features = false, features = ["test-support"] }
tempfile = "3"
