[package]
name = "daanio-provider-claude-cli-runtime"
version = "0.1.0"
edition = "2024"
description = "Deprecated Claude CLI provider runtime (subprocess transport) for daanio, kept downstream of daanio-base so provider edits do not rebuild the app spine"

[lib]
name = "daanio_provider_claude_cli_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
# default-features = false: the top-level binary decides heavy optional base
# features (embeddings/bedrock). Runtime crates must not re-enable them via
# feature unification, or --no-default-features release targets (e.g. Windows
# ARM64, which cannot build tract-linalg asm) break.
daanio-base = { path = "../daanio-base", default-features = false }
daanio-message-types = { path = "../daanio-message-types" }
daanio-provider-core = { path = "../daanio-provider-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "process", "io-util"] }
tokio-stream = "0.1"
