[package]
name = "daanio-provider-openai"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
futures = "0.3"
daanio-core = { path = "../daanio-core" }
daanio-logging = { path = "../daanio-logging" }
daanio-message-types = { path = "../daanio-message-types" }
daanio-provider-core = { path = "../daanio-provider-core" }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
