[package]
name = "daanio-provider-openrouter"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
bytes = "1"
futures = "0.3"
daanio-core = { path = "../daanio-core" }
daanio-logging = { path = "../daanio-logging" }
daanio-message-types = { path = "../daanio-message-types" }
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
