[package]
name = "daanio-setup-hints"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "daanio_setup_hints"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
dirs = "5"
daanio-build-meta = { path = "../daanio-build-meta" }
daanio-config-types = { path = "../daanio-config-types" }
daanio-logging = { path = "../daanio-logging" }
daanio-storage = { path = "../daanio-storage" }
daanio-terminal-launch = { path = "../daanio-terminal-launch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
