[package]
name = "daanio-telemetry-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "daanio_telemetry_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
daanio-build-meta = { path = "../daanio-build-meta" }
daanio-core = { path = "../daanio-core" }
daanio-logging = { path = "../daanio-logging" }
daanio-provider-core = { path = "../daanio-provider-core" }
daanio-selfdev-types = { path = "../daanio-selfdev-types" }
daanio-storage = { path = "../daanio-storage" }
daanio-usage-types = { path = "../daanio-usage-types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["rt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
