[package]
name = "daanio-tool-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "daanio_tool_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
daanio-agent-runtime = { path = "../daanio-agent-runtime" }
daanio-message-types = { path = "../daanio-message-types" }
daanio-tool-types = { path = "../daanio-tool-types" }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
