[package]
name = "daanio-tui-markdown"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
daanio-render-core = { path = "../daanio-render-core" }
daanio-tui-mermaid = { path = "../daanio-tui-mermaid", optional = true }
daanio-tui-workspace = { path = "../daanio-tui-workspace" }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
mdwright-latex = "0.1.3"
pulldown-cmark = "0.12"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
unicode-width = "0.2"
tempfile = "3"
wait-timeout = "0.2"

[features]
default = ["mermaid-renderer"]
mermaid-renderer = ["dep:daanio-tui-mermaid"]
